--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "line-awesome": "^1.3.0",
     "rxjs": "~6.6.0",
     "simple-parallax-js": "^5.6.2",
+    "sweetalert2": "^11.1.9",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
