--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node backend/app.js",
+    "dev": "nodemon backend/app.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,9 +21,15 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "line-awesome": "^1.3.0",
+    "mongodb": "^4.1.4",
+    "nodemon": "^2.0.14",
     "rxjs": "~6.6.0",
     "simple-parallax-js": "^5.6.2",
     "sweetalert2": "^11.1.9",
