--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "express": "^4.17.1",
         "jquery": "^3.5.1",
         "line-awesome": "^1.3.0",
+        "lodash": "^4.17.21",
         "mongodb": "^4.1.4",
         "nodemon": "^2.0.14",
         "rxjs": "~6.6.0",
